feat: Lembaga sosial - setujui atau tolak donasi [GREEN]

--- a/donasi/templates/lembaga-sosial/ls-donasiDisetujuiModal.html
+++ b/donasi/templates/lembaga-sosial/ls-donasiDisetujuiModal.html
@@ -7,9 +7,9 @@
         <p>Status donasi : Menunggu pengiriman</p>
       </div>
       <div class="text-center mb-4">
-        <button onclick="setujuiDonasi()" type="button" class="btn btn-primary btn-center" data-dismiss="modal">Tutup</button>
+        <button onclick="setujuiDonasi()" type="button" class="btn btn-primary btn-center"
+          data-dismiss="modal">Tutup</button>
       </div>
     </div>
   </div>
 </div>
-
