--- a/donasi/templates/lembaga-sosial/ls-donasiSelesaiModal.html
+++ b/donasi/templates/lembaga-sosial/ls-donasiSelesaiModal.html
@@ -7,16 +7,9 @@
         <p>Status donasi :Selesai</p>
       </div>
       <div class="text-center mb-4">
-        <button onclick="setujuiDonasi()" type="button" class="btn btn-primary btn-center" data-dismiss="modal">Tutup</button>
+        <button onclick="setujuiDonasi()" type="button" class="btn btn-primary btn-center"
+          data-dismiss="modal">Tutup</button>
       </div>
     </div>
   </div>
 </div>
-
-<script>
-  function setujuiDonasi() {
-    document.getElementById("statusDonasi").innerText = "Menunggu pengiriman";
-    document.getElementById("btnSetujui").disabled = true;
-    document.getElementById("btnTolak").disabled = true;
-  }
-</script> 
