--- a/donasi/templates/lembaga-sosial/ls-konfirmasiBarangDiterimaModal.html
+++ b/donasi/templates/lembaga-sosial/ls-konfirmasiBarangDiterimaModal.html
@@ -8,9 +8,9 @@
       </div>
       <div class="text-center mb-4">
         <button type="button" class="btn btn-secondary btn-center" data-dismiss="modal">Tutup</button>
-        <button onclick="konfirmasiDonasi()" type="button" class="btn btn-primary btn-center" data-dismiss="modal">Sudah</button>
+        <button onclick="konfirmasiDonasi()" type="button" class="btn btn-primary btn-center"
+          data-dismiss="modal">Sudah</button>
       </div>
     </div>
   </div>
 </div>
-
