--- a/donasi/templates/lembaga-sosial/ls-donasiDitolakModal.html
+++ b/donasi/templates/lembaga-sosial/ls-donasiDitolakModal.html
@@ -10,15 +10,17 @@
       </div>
       <div class="modal-body">
         <h5 class="text-center">Mengapa ingin menolak donasi?</h5>
+        <div id="warningEmptyData" style="display: none;" class="alert alert-danger mt-3">
+          <strong>Perhatian!</strong> <span id="warningText">Text</span>
+        </div>
         <div class="input-group">
-          <textarea class="form-control"></textarea>
+          <textarea id="alasanPenolakan" class="form-control"></textarea>
         </div>
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-          data-target="#ls-donasiSelesaiDitolakModal">Tolak Donasi</button>
+        <button onclick="checkData()" type="button" class="btn btn-danger">Tolak Donasi</button>
       </div>
     </div>
   </div>
