--- a/donasi/templates/lembaga-sosial/ls-formulirdonasi.html
+++ b/donasi/templates/lembaga-sosial/ls-formulirdonasi.html
@@ -1,62 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riwayat Donasi - SoLink</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"></head>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        div p {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
+<style>
+    div p {
+        margin: 0;
+        padding: 0;
+    }
+</style>
+</head>
+
 <body style="background-color: #bbd4ce; font-family: 'Nunito', sans-serif;">
     {% include 'navbar.html' %}
     <div class="container" style="margin-top: 2%;">
         <div class="row">
             <div class="col" style="text-align: center;">
-                <h1 style="font-family: 'Caveat', cursive;">Formulir Donasi</h1>
+                <h1 style="font-family: 'Caveat', cursive;">Daftar Formulir Donasi</h1>
             </div>
         </div>
-        
-              <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-10">
-                            <p class="font-weight-bold">Nama donatur : </p>
-                            <p class="mb-2">Adhytia Wana</p>
 
-                            <p class="font-weight-bold">Status donasi : </p>
-                            <p id="statusDonasi" class="mb-2">Menunggu persetujuan lembaga sosial</p>
+        {% for d in data %}
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-10">
+                        <p class="font-weight-bold">Nama donatur : </p>
+                        <p class="mb-2">{{d.namaDonatur}}</p>
 
-                            <p class="font-weight-bold">Tanggal donasi : </p>
-                            <p class="mb-2s">dd/mm/yyy</p>
+                        <p class="font-weight-bold">Tanggal donasi : </p>
+                        <p class="mb-2">{{d.tanggalDonasi}}</p>
 
-                            <p class="font-weight-bold">Jenis barang : </p>
-                            <p class="mb-2s">Pakaian</p>
-                        </div>
-                        <div class="col-2">
-                            <button id="btnTolak" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ls-donasiDitolakModal">
-                                <p class="card-text">Tolak</p>
-                            </button>
+                        <p class="font-weight-bold">Jenis barang : </p>
+                        <p class="mb-2">{{d.jenisBarang}}</p>
 
-                            <button id="btnSetujui" type="button" class="btn btn-primary" data-toggle="modal" data-target="#ls-donasiDisetujuiModal">
-                                <p class="card-text">Setujui</p>
-                            </button>
-                        </div>
+                        <p class="font-weight-bold">Status donasi : </p>
+                        <p id="statusDonasi" class="mb-2">{{d.status}}</p>
+
+                        {% if d.alasanPembatalan != "" %}
+                        <p class="font-weight-bold">Alasan : </p>
+                        <p>{{d.alasanPembatalan}}</p>
+                        {% endif %}
                     </div>
+                    <div class="col-2">
+                        {% if d.status == "Menunggu persetujuan lembaga sosial" or d.status == "Permohonan pembatalan donasi dari donatur telah ditolak karena alasan yang tidak valid. Harap tunggu respon dari lembaga sosial"%}
+                        <button onclick="setIdDonasiInfo('{{d.id}}','{{d.status}}')" id="btnTolak" type="button"
+                            class="btn btn-secondary" data-toggle="modal" data-target="#ls-donasiDitolakModal">
+                            <p class="card-text">Tolak</p>
+                        </button>
 
-                    <button id="btnKonfirmasi" style="display:none;" type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#ls-konfirmasiBarangDiterimaModal">
-                        <p class="card-text">Konfirmasi barang diterima</p>
-                    </button>
+                        <button onclick="setIdDonasiInfo('{{d.id}}','{{d.status}}')" id="btnSetujui" type="button"
+                            class="btn btn-primary" data-toggle="modal" data-target="#ls-donasiDisetujuiModal">
+                            <p class="card-text">Setujui</p>
+                        </button>
+                        {% elif d.status == "Menunggu pengiriman"%}
+                        <button onclick="setIdDonasiInfo('{{d.id}}','{{d.status}}')" id="btnTolak" type="button"
+                            style="display: none;" class="btn btn-secondary" data-toggle="modal"
+                            data-target="#ls-donasiDitolakModal">
+                            <p class="card-text">Tolak</p>
+                        </button>
 
+                        <button onclick="setIdDonasiInfo('{{d.id}}','{{d.status}}')" id="btnSetujui" type="button"
+                            style="display: none;" class="btn btn-primary" data-toggle="modal"
+                            data-target="#ls-donasiDisetujuiModal">
+                            <p class="card-text">Setujui</p>
+                        </button>
+                        {% endif %}
+                    </div>
                 </div>
-              </div>
+
+                {% if d.status == "Menunggu persetujuan lembaga sosial"%}
+                <button onclick="setIdDonasiInfo('{{d.id}}','{{d.status}}')" id="btnKonfirmasi" style="display:none;"
+                    type="button" class="btn btn-primary mt-3" data-toggle="modal"
+                    data-target="#ls-konfirmasiBarangDiterimaModal">
+                    <p class="card-text">Konfirmasi barang diterima</p>
+                </button>
+                {% elif d.status == "Menunggu pengiriman"%}
+                <button onclick="setIdDonasiInfo('{{d.id}}','{{d.status}}')" id="btnKonfirmasi" type="button"
+                    class="btn btn-primary mt-3" data-toggle="modal" data-target="#ls-konfirmasiBarangDiterimaModal">
+                    <p class="card-text">Konfirmasi barang diterima</p>
+                </button>
+                {% endif %}
+
+            </div>
+        </div>
+        {% endfor %}
+
     </div>
 
     {% include 'lembaga-sosial/ls-donasiDisetujuiModal.html' %}
@@ -67,22 +104,68 @@
 </body>
 
 <script>
-    function setujuiDonasi() {
-        document.getElementById("statusDonasi").innerText = "Menunggu pengiriman";
-        document.getElementById("btnSetujui").style.display = "none";
-        document.getElementById("btnTolak").style.display = "none";
-        document.getElementById("btnKonfirmasi").style.display = "block";
+    var idDonasi;
+    var status;
+    switch (status) {
+        case "Menunggu Pengiriman":
+            document.getElementById("btnSetujui").style.display = "none";
+            document.getElementById("btnTolak").style.display = "none";
+            document.getElementById("btnKonfirmasi").style.display = "block";
+            break;
+        case "Ditolak":
+        case "Selesai":
+            document.getElementById("btnSetujui").style.display = "none";
+            document.getElementById("btnTolak").style.display = "none";
+            document.getElementById("btnKonfirmasi").style.display = "none";
+            break;
     }
+    const setIdDonasiInfo = (idDonasi, status) => {
+        this.idDonasi = idDonasi;
+        this.status = status;
+    }
+    const setujuiDonasi = () => {
+        var payload = {
+            idDonasi: this.idDonasi,
+            status: "Menunggu pengiriman",
+        };
+        sendPOST(payload);
+    }
+
     function tolakDonasi() {
-        document.getElementById("statusDonasi").innerText = "Ditolak";
-        document.getElementById("btnSetujui").style.display = "none";
-        document.getElementById("btnTolak").style.display = "none";
-        document.getElementById("btnKonfirmasi").style.display = "none";
+        alasanPenolakan = document.getElementById("alasanPenolakan").value;
+        var payload = {
+            idDonasi: this.idDonasi,
+            alasanPenolakan: alasanPenolakan,
+            status: "Ditolak",
+        };
+        sendPOST(payload);
     }
-    function konfirmasiDonasi() {
-        document.getElementById("statusDonasi").innerText = "Selesai";
-        document.getElementById("btnKonfirmasi").style.display = "none";
+    const konfirmasiDonasi = () => {
+        var payload = {
+            idDonasi: this.idDonasi,
+            status: "Selesai",
+        };
+        sendPOST(payload);
+    }
+    const checkData = () => {
+        alasanPembatalan = document.getElementById("alasanPenolakan").value;
+        warning = document.getElementById("warningEmptyData");
+        warningText = document.getElementById("warningText");
+        if (alasanPembatalan == "") {
+            warningText.innerText = "Alasan penolakan tidak boleh kosong";
+            warning.style.display = "block";
+        } else {
+            $('#ls-donasiSelesaiDitolakModal').modal('show')
+            $('#ls-donasiDitolakModal').modal('hide')
+        }
+    }
+    const sendPOST = (data) => {
+        $.ajax({
+            type: "POST",
+            url: "/donasi/lembaga-sosial/formulir-donasi/",
+            data: data
+        })
+        location.reload()
     }
 </script>
 </html>
-
