refactor: Rename navbar menu

--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -29,7 +29,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{% url 'article:editArticle' %}">Kelola Artikel</a>
-            <a class="dropdown-item" href="{% url 'donasi:pembatalandonasi' %}">Pembatalan Donasi</a>
+            <a class="dropdown-item" href="{% url 'donasi:pembatalandonasi' %}">Validasi Pembatalan Donasi</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
             role : Lembaga Sosial
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{% url 'donasi:formulirdonasi' %}">Formulir Donasi</a>
+            <a class="dropdown-item" href="{% url 'donasi:formulirdonasi' %}">Daftar Formulir Donasi</a>
           </div>
         </li>
         <li class="nav-item">
