--- a/barang/templates/konfirmasiHapus.html
+++ b/barang/templates/konfirmasiHapus.html
@@ -1,18 +1,21 @@
-<div class="modal fade" id="konfirmasiHapus" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="konfirmasiHapusLabel" aria-hidden="true">
+{% extends "navbar.html" %}
+
+{% block content %}
+  <form method="POST">
+    {% csrf_token %}
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="konfirmasiHapusLabel">Hapus Barang !!!</h5>
         </div>
         <div class="modal-body">
-            <h3>Apakah anda akan menghapus <strong>Tumbler</strong>?</h3>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success" data-dismiss="modal">Batal</button>
-          <a href="{% url 'barang:listBarang' %}">
-            <button type="button" class="btn btn-primary">Hapus</button>
-        </a>
+            <img src="{{ image }}" class="card-img-top">
+            <h3>Apakah anda akan menghapus <strong>{{ form.namaBarang }}</strong>?</h3>
+            <input type="submit" name="submit" value ="Delete" class="btn btn-outline-success" id ="tombol">
+            <a href="{% url 'barang:listBarang' %}" class="btn btn-outline-primary" role="button">Back</a>
         </div>
       </div>
     </div>
-  </div>
+  </form>
+
+{% endblock %}
