--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -8,13 +8,23 @@
     
         <title>Sign Up</title>
     </head>
-    <body style="background-color: lightgreen;">
+    <style>
+        .center {
+          margin: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+        }
+    </style>
+    <body style="background-color: #679186;">
         <script src="https://code.jquery.com/jquery-1.11.3.js" ></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         
         {% load crispy_forms_tags %}
-        <div class="d-flex align-items-center row justify-content-center">
+        <div class="d-flex align-items-center row justify-content-center center">
                 <div class="card">
                     <div class="card-body">
                         <h1>Sign up</h1>
