--- a/article/static/css/melihatArtikel.css
+++ b/article/static/css/melihatArtikel.css
@@ -13,9 +13,9 @@
 
 .blog-item a.header > img {
     width: 100%; 
-    height: 550px; 
+    max-height: 600px; 
     object-fit: cover;
-    filter: brightness(85%);
+    filter: brightness(75%);
     transition: .5s ease;
     
 }
