--- a/article/static/css/mengelolaArtikel2.css
+++ b/article/static/css/mengelolaArtikel2.css
@@ -66,7 +66,7 @@ a.btn-success{
   color: #fff !important;
 }
 
-button.btn-danger{
+a.btn-danger{
     background: #db2540;
     text-align: center;
     padding: 5px 20px 5px;
