--- a/article/templates/melihatArtikel.html
+++ b/article/templates/melihatArtikel.html
@@ -10,69 +10,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"></head>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/viewArticle.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/melihatArtikel.css' %}">
 
 </head>
 
 <body style="background-color: #bbd4ce; font-family: 'Nunito', sans-serif;">
     {% include 'navbar.html' %}
+    {% for obj in artikel %}
     <div class="blog-item">
-        <a class="header" href="{% static 'img/baby.jpg' %}">
-            <img src="{% static 'img/baby.jpg' %}">
+        <a class="header" href="{{ obj.gambarThumbnail.url }}">
+            <img src="{{ obj.gambarThumbnail.url }}">
         </a>
         <div class="container">
             <br><br>
 	    	<div class="row">
 	    		<div class="col-md-8 offset-md-2">
-	    			<h1>Tips Zero Waste Baby</h1>
+	    			<h1>{{ obj.judulArtikel }}</h1>
 		    		 <br>
-
-		    		 <p>
-		    		 	Tahukah kamu, anak menjadi salah satu sumber sampah di rumah, misalnya penggunaan diaper sekali pakai (pospak), makanan, hingga mainan (toys) yang membuat mereka senang. Sedangkan kita sebagai orang tua ingin melihat melihat anak kita tumbuh sehat dan berada di lingkungan yang bersih tentunya.
-		    		 	<br><br>
-
-		    		 	Diketahui dari Zero Waste Canada yang menyatakan, lebih dari 4 juta popok sekali pakai adalah dibuang setiap hari di Kanada. Sedangkan 1 pospak membutuhkan 500 tahun untuk bisa terurai. Bukan hanya itu, lebih dari 190.000 baby car seat dibuang begitu saja ke TPA setiap tahunnya.
-		    		 	<br><br>
-
-		    		 	Apa jadinya bumi kita jika banyak sampah yang sulit terurai? Bagaimana anak-anak kesayangan kita puluhan tahun yang akan mendatang? Akankah mereka di hidup di lingkungan yang dipenuhi sampah (kotor)? Ya..bisa saja.
-		    		 	<br><br>
-
-		    		 	Nah untuk menghindari hal tersebut, kita sebagai orang tua harus mampu menemukan cara untuk mencegah hal tersebut. Salah satu caranya yaitu menerapkan gaya hidup zero waste atau zero waste lifestyle. 
-		    		 	<br><br>
-
-                        Memperkenalkan zero waste lifestyle kepada anak juga penting dilakukan semenjak dini. Namun, untuk memulainya, orangtua harus lebih dulu punya kesadaran soal itu.
-                        <br><br>
-
-                        Berikut 3 sikap zero waste untuk anak:
-                        <br><br>
-
-                        <h4>1. Masa Kehamilan</h4>
-
-                        Hamil menjadi masa yang paling indah bagi setiap ibu sebelum bertemu dengan sang buah hati. Saat hamil, ada beberapa tips zero waste yang juga perlu diperhatikan, mulai dari makanan yang perlu dimakan, pakaian yang harus dipakai, baby shower (tradisi syukuran), hingga proses kelahiran.
-                        <br><br>
-
-                        <h4>2. Pertimbangan Diaper Untuk Baby</h4>
-
-                        Seperti yang sudah dijelaskan sebelumnya, bahwa sampah diaper sekali pakai (pospak) membutuhkan waktu 500 tahun untuk dapat terurai dan menyebabkan pencemaran lingkungan. Kira-kira apakah kamu masih mau menggunakannya?
-                        <br><br>
-
-                        Untuk menciptakan bumi yang lebih baik dan lebih bersih, alangkah lebih baik jika kamu mulai mengganti popok dengan diaper yang ramah lingkungan dan bisa digunakan berkali-kali. Atau biasa kita kenal dengan istilah “Clodi”.
-                        <br><br>
-
-                        Clodi atau singkatan dari cloth diaper adalah diaper (popok bayi) yang terbuat dari kain dan dirancang sedemikian rupa sehingga memiliki daya serap yang tinggi dan praktis digunakan seperti diaper sekali pakai pada umumnya.
-                        <br><br>
-
-                        <h4>3. Pakaian Untuk Baby</h4>
-
-                        Salah satu kesalahan kita yang sering kita lakukan yaitu membelikan anak berbagai macam jenis pakaian (fashion) untuk membuat anak terlihat lebih menarik, lucu, maupun cantik/ganteng. Kebanyakan kita juga suka membeli baju dengan model terbaru dan populer di pasaran. Iya nggak?
-                        <br><br>
-
-                        Namun sadarkan kamu, hal tersebut merupakan salah satu aksi untuk meningkatkan limbah fashion yang dapat merusak lingkungan, seperti polusi air, tanah, maupun penghasil gas emisi rumah kaca yang dapat menyebabkan climate change (perubahan iklim).
-                        <br><br>
-
-                        Untuk itu kita perlu memperhatikan pakaian yang akan dikenakan oleh anak kita, pakaian disini meliputi baju, celana, sepatu, dan aksesoris lainnya. Berikut tips nya:
-
-                     </p>
+                        {{ obj.isiArtikel | safe }}
                      <br>
 		    		 <button class="btn btn-primary btn-sm facebook"> <i class="ion-social-facebook"></i> Share </button>
 		    		 <button class="btn btn-primary btn-sm twitter"> <i class="ion-social-twitter"></i> Retweet</button>
@@ -86,25 +41,25 @@
                                 <!-- slides -->
                                 <div class="carousel-inner">
                                     <div class="carousel-item active"> 
-                                        <a href="#">
+                                        <a href="{% url 'article:melihatArtikel' 6 %}">
                                             <img src="{% static 'img/kompos.jpg' %}">
                                         </a>
                                         <h3 class="title-img">Manfaat Mengompos Di Rumah</h3>
                                     </div>
                                     <div class="carousel-item "> 
-                                        <a href="#">
-                                            <img src="{% static 'img/new normal.jpeg' %}">
+                                        <a href="{% url 'article:melihatArtikel' 2 %}">
+                                            <img src="{% static 'img/zerowaste.jpg' %}">
                                         </a>
                                         <h3 class="title-img">Menerapkan Zero Waste Lifestyle di Masa Pandemi</h3>
                                     </div>
                                     <div class="carousel-item "> 
-                                        <a href="#">
+                                        <a href="{% url 'article:melihatArtikel' 4 %}">
                                             <img src="{% static 'img/kamar mandi.jpg' %}">
                                         </a>
                                         <h3 class="title-img">Sikap Bijak Menggunakan Listrik di Kamar Mandi</h3>
                                     </div>
                                     <div class="carousel-item "> 
-                                        <a href="#">
+                                        <a href="{% url 'article:melihatArtikel' 3 %}">
                                             <img src="{% static 'img/grocery.jpeg' %}">
                                         </a>
                                         <h3 class="title-img">Tips Zero Waste Untuk Grocery Shopping</h3>
@@ -112,7 +67,7 @@
                                 </div> <!-- Left right --> <a class="carousel-control-prev" href="#custCarousel" data-slide="prev"> <span class="carousel-control-prev-icon"></span> </a> <a class="carousel-control-next" href="#custCarousel" data-slide="next"> <span class="carousel-control-next-icon"></span> </a> <!-- Thumbnails -->
                                 <ol class="carousel-indicators list-inline">
                                     <li class="list-inline-item active"> <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#custCarousel"> <img src="{% static 'img/kompos.jpg' %}" class="img-fluid"> </a> </li>
-                                    <li class="list-inline-item"> <a id="carousel-selector-1" data-slide-to="1" data-target="#custCarousel"> <img src="{% static 'img/new normal.jpeg' %}" class="img-fluid"> </a> </li>
+                                    <li class="list-inline-item"> <a id="carousel-selector-1" data-slide-to="1" data-target="#custCarousel"> <img src="{% static 'img/zerowaste.jpg' %}" class="img-fluid"> </a> </li>
                                     <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="2" data-target="#custCarousel"> <img src="{% static 'img/kamar mandi.jpg' %}" class="img-fluid"> </a> </li>
                                     <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="3" data-target="#custCarousel"> <img src="{% static 'img/grocery.jpeg' %}" class="img-fluid"> </a> </li>
                                 </ol>
@@ -127,5 +82,6 @@
         
         <br>
     </div>
+    {% endfor %}
 </body>
 </html>
