--- a/loginin/templates/halamanLogin.html
+++ b/loginin/templates/halamanLogin.html
@@ -37,7 +37,7 @@
                     <p>Selamat datang</p>
                     <a href="{% url 'login' %}" class="btn btn-primary">Sign in</a>
                     <a href="{% url 'loginin:signup' %}" class="btn btn-primary">Sign up</a>
-                    <a href="{% url 'article:articleList' %}" class="btn btn-secondary">Kembali</a>
+                    <a href="{% url 'article:articleList' %}" class="btn btn-secondary">Menu </a>
                     {% endif%}
                     </div>
                     </div>
