[GREEN] testing Article app

--- a/article/templates/melihatArtikel.html
+++ b/article/templates/melihatArtikel.html
@@ -84,4 +84,9 @@
     </div>
     {% endfor %}
 </body>
+{% if message != "" %}
+<script>
+    alert('{{ message }}');
+</script>
+{% endif %}
 </html>
